create product components

--- a/screens/CardListScreenM.css
+++ b/screens/CardListScreenM.css
@@ -1,16 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?familiy=Montserrat&display=swap");
+
 html{
     font-size: 62.5%;
     box-sizing: border-box;
 }
 
-body, #root{
+body,
+ #root{
     height: 100vh;
     margin: 0;
 }
 
-body, input, select, textarea{
+body, input,button,select, textarea{
+      font-family: Montserrat,Helvetica,Arial, sans-serif ;
       font-size: 1.6rem;
-      font-family: Helvetica,Arial, sans-serif;
+    
 }
 .grid-container{
     display: grid;
@@ -22,6 +26,10 @@ body, input, select, textarea{
     grid-template-columns: 1fr;
     height: 100%;
 
+}
+
+a{
+    text-decoration: none;
 }
 a:hover{
     color: #ff8000;
@@ -66,5 +74,73 @@ footer{
 }
 
 .sidebar {
-    flex: 1 20rem;
+    flex: 1 1 20rem;
+    align-content: center;
+}
+
+
+/* products*/
+
+/* .products{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    list-style-type: none; 
+}
+
+ .products li{
+    flex: 1 1 29rem;
+    height: 47rem;
+    padding: 1rem;
+    margin : 1rem;
+} */
+
+ .product{
+    display: flex;
+    flex-direction:  column;
+    justify-content: space-between;
+    height:  50%
+
+}
+/*
+.product img {
+    max-width: 37rem;
+    max-height: 37rem;
+}
+*/
+
+.product-price{
+    /* display: flex; */
+    justify-content: space-between ;
+    align-items: center;
+    text-align: center;
+}
+
+.product-price div,
+.product-price button{
+    text-align: center;
+    flex: 1;
+
+}
+
+.product-price div{
+
+    font-size: 2rem;
+} 
+
+.button{
+    padding: 1rem;
+    border: 0.1rem #c0c0c0 solid;
+    background-color: #f0f0f0;
+    cursor: pointer;
+}
+
+.button:hover{
+     border: 0.1rem #04284d solid; /* //#808080 solid */
+} 
+.button.primary{
+    background-color: #ffc000;
 }
